[tool.poetry]
name = "flox-bootstrap"
version = "0.1.0"
description = ""
authors = ["Michal Przytulski <michal@przytulski.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.11.1"
click = "^7.0"
flox-core = {path = "../flox-core"}
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."flox.plugin"]
bootstrap = "flox_bootstrap:plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
